Refactor package structure and rename classes for better organization; implement LandLord service and repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=officeZone
 # Database Connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/stocks
+spring.datasource.url=jdbc:postgresql://localhost:5432/officezone
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -8,6 +8,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+# Server Configuration
+server.port=5050
 
 spring.main.banner-mode=off
 logging.level.roote=warn
